--- a/style.css
+++ b/style.css
@@ -1,79 +1,77 @@
-body {
-  background-color: hsla(50, 33%, 79%, .75);
-}
-.logo-box img {
-  width: 100%; /* Set width to fill the container */
-}
 
-.small-box {
-    border: 1px solid #2309ed;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 10px;
-    font-size: large;
-      /* margin-right: 4rem;
-      box-shadow: 0 4px  4px  rgba(0, 0, 0, .1),
-                  0 1px  6px  rgba(0, 0, 0, .05),
-                  0 8px  8px  rgba(0, 0, 0, .1), 
-                  0 16px 16px rgba(0, 0, 0, .1), 
-                  5px 32px 32px rgba(0, 0, 0, .15), 
-                  5px 64px 64px rgba(0, 0, 0, .15); */
-  }
-
-  .icon {
-    float: left;
-    margin-right: 10px;
-  }
-  .name {
-    font-weight: bold;
-  }
-
-  /* For Middle Box Company Information */
-  .custom-box-1 {
-    border: 1px solid #2309ed;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 10px;
-  }
-  .custom-title-1 {
-    font-weight: bold;
-  }
-  @media (min-width: 768px) {
-    .middle-screen-company-num {
-      margin: 0 auto;
-    }
-  }
-  .layered.box {
-    box-shadow:
-      0 1px 1px hsl(0deg 0% 0% / 0.075),
-      0 2px 2px hsl(0deg 0% 0% / 0.075),
-      0 4px 4px hsl(0deg 0% 0% / 0.075),
-      0 8px 8px hsl(0deg 0% 0% / 0.075),
-      0 16px 16px hsl(0deg 0% 0% / 0.075);
-      background-color:
-      hsl(220, 60%, 72%);
-
-  }
-    
-
-
-  /* QR code */
-
-  .image-box {
-    border: 2px solid;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    overflow: hidden;
-    height: 170px;
-    width: 170px;
-  }
-  .image-box img {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
-  /* Colored borders */
   
-  .blue-border {
-    border-color: blue;
+  .logo-box img {
+    /* margin-left: 100px; */
+    border: 2px solid transparent;
+    margin-left: 15px;
   }
+  .logo-box img:hover{
+    border: 2px solid rgb(54, 80, 192);
+  }
+  
+  .small-box {
+      border: 1px solid #101011;
+      border-radius: 5px;
+      font-size: large;
+      margin-top: 3px;
+    }
+  
+    .icon {
+      float: left;
+      margin-bottom: 2px;
+      padding: 4px;
+
+      /* margin-right: 10px; */
+    }
+    .name {
+      font-weight: bold;
+    }
+  
+    /* For Middle Box Company Information */
+    .custom-box-1 {
+      border: 1px solid #2309ed;
+      border-radius: 5px;
+      /* padding: 10px; */
+      /* margin-bottom: 10px; */
+    }
+    .custom-title-1 {
+      font-weight: bold;
+    }
+    @media (min-width: 768px) {
+      .middle-screen-company-num {
+        /* margin: 0 auto; */
+      }
+    }
+    .layered.box {
+      box-shadow:
+        0 1px 1px hsl(0deg 0% 0% / 0.075),
+        0 2px 2px hsl(0deg 0% 0% / 0.075),
+        0 4px 4px hsl(0deg 0% 0% / 0.075),
+        0 8px 8px hsl(0deg 0% 0% / 0.075),
+        0 16px 16px hsl(0deg 0% 0% / 0.075);
+        background-color:
+        hsl(220, 60%, 72%);
+  
+    }
+      
+  
+  
+    /* QR code */
+  
+    .image-box {
+        margin-top: 20px;
+      border: 2px solid;
+      border-radius: 5px;
+      /* margin-bottom: 10px; */
+      overflow: hidden;
+      /* height: 170px;
+      width: 170px; */
+    }
+    /* .image-box img {
+      margin-top: 20;
+    } */
+    /* Colored borders */
+    
+    .blue-border {
+      border-color: blue;
+    }
